--- a/css/style.css
+++ b/css/style.css
@@ -80,10 +80,7 @@ body {
 }
 
 
-footer {
-    margin-bottom: 500px;
 
-}
 
 .button {
     display: inline-block;
@@ -1832,7 +1829,6 @@ footer {
 /* -------------------END FORM ---------------------------- */
 
 .footer__top {
-    height: 338px;
     background: #1E212C;
     padding: 80px 0 60px;
     color: white;
@@ -1841,12 +1837,10 @@ footer {
 
 .footer__top-inner {
     display: flex;
+    justify-content: space-between;
 
 }
 
-.footer__about {
-    margin-right: 80px;
-}
 
 .footer__logo {
     display: block;
@@ -1855,18 +1849,13 @@ footer {
 
 
 .footer__paragraph {
-    width: 276px;
-    height: 90px;
+    max-width: 276px;
     font-size: 12px;
     font-weight: 400;
     line-height: 150%;
     opacity: 0.6;
     margin-bottom: 38px;
 }
-
-
-
-
 
 .footer__icons-box {
     display: flex;
@@ -1881,10 +1870,6 @@ footer {
     transition: all .3s;
 }
 
-.footer__links {
-    display: flex;
-
-}
 
 
 .footer__links a {
@@ -1900,15 +1885,24 @@ footer {
 }
 
 .footer__site-map {
-    margin-right: 80px;
+    display: flex;
+    padding: 0 15px;
+    margin-bottom: 30px;
+
 }
 
 .footer__cources {
-    margin-right: 80px;
+    display: flex;
+    padding: 0 15px;
+    margin-bottom: 30px;
+
 }
 
 .footer__contacts {
-    margin-right: 80px;
+    display: flex;
+    padding: 0 15px;
+    margin-bottom: 30px;
+
 }
 
 .footer__links H2 {
@@ -2043,6 +2037,15 @@ footer {
     height: 16px;
     cursor: pointer;
 }
+
+.test{
+    margin-bottom: 500px;
+    background-color: #424551;
+    width: 100%;
+    height: 500px;
+
+}
+
 
 
 
@@ -2291,6 +2294,25 @@ footer {
         height: 100%;
     }
 
+    /* ----------------------------------- */
+    .footer__top-inner {
+        flex-wrap: wrap;
+    }
+
+    .footer__about {
+        margin-bottom: 30px;
+        
+
+    }
+
+    .footer__paragraph {
+        max-width: none;
+        margin-bottom: 30px;
+
+    }
+
+    
+
 }
 
 
@@ -2432,7 +2454,7 @@ footer {
         width: 100%;
     }
 
-    .form__item-checkbox{
+    .form__item-checkbox {
         margin-right: 12px;
     }
 
