--- a/css/style.css
+++ b/css/style.css
@@ -1838,6 +1838,7 @@ body {
 .footer__top-inner {
     display: flex;
     justify-content: space-between;
+    
 
 }
 
@@ -1845,6 +1846,7 @@ body {
 .footer__logo {
     display: block;
     margin-bottom: 24px;
+    
 }
 
 
@@ -1853,8 +1855,8 @@ body {
     font-size: 12px;
     font-weight: 400;
     line-height: 150%;
-    opacity: 0.6;
     margin-bottom: 38px;
+    opacity: 0.6;
 }
 
 .footer__icons-box {
@@ -1878,32 +1880,29 @@ body {
     /* чтобы слова не переносились */
 }
 
-.footer__links a:hover {
+
+
+.footer__items {
+    display: flex;
+    flex-direction: column;
+    padding: 0 15px;
+    margin-bottom: 30px;
+    
+
+}
+
+.footer__items-li{
+    opacity: 0.6;
     transition: all .3s;
+}
+
+.footer__items-li:hover {
+   
     opacity: 1;
 
 }
 
-.footer__site-map {
-    display: flex;
-    padding: 0 15px;
-    margin-bottom: 30px;
 
-}
-
-.footer__cources {
-    display: flex;
-    padding: 0 15px;
-    margin-bottom: 30px;
-
-}
-
-.footer__contacts {
-    display: flex;
-    padding: 0 15px;
-    margin-bottom: 30px;
-
-}
 
 .footer__links H2 {
     display: block;
@@ -1914,10 +1913,10 @@ body {
     text-transform: uppercase;
     margin-bottom: 12px;
     white-space: nowrap;
+    
 
 }
 
-.footer__contacts-items span {}
 
 .footer__contacts-item {
     display: inline-block;
@@ -2038,7 +2037,7 @@ body {
     cursor: pointer;
 }
 
-.test{
+.test {
     margin-bottom: 500px;
     background-color: #424551;
     width: 100%;
@@ -2297,11 +2296,12 @@ body {
     /* ----------------------------------- */
     .footer__top-inner {
         flex-wrap: wrap;
+        justify-content: flex-start;
     }
 
     .footer__about {
         margin-bottom: 30px;
-        
+
 
     }
 
@@ -2311,7 +2311,18 @@ body {
 
     }
 
-    
+    .footer__sign {
+        flex-basis: 100%;
+        max-width: none;
+
+    }
+
+    .footer__sign-items H2 {
+        margin-bottom: 8px;
+
+    }
+
+
 
 }
 
@@ -2779,6 +2790,19 @@ body {
         width: 100%;
         flex: auto;
 
+    }
+
+    /* ----------------------------------- */
+    .footer__top-inner {
+        flex-direction: column;
+    }
+
+    .footer__items {
+        margin-bottom: 0;
+    }
+
+    .footer__items-ul {
+        /* display: none; */
     }
 
 
