--- a/css/style.css
+++ b/css/style.css
@@ -1913,6 +1913,11 @@ body {
     pointer-events: none;
 }
 
+.footer__sign-items{
+    max-width: 286px;
+
+}
+
 
 
 
@@ -1928,48 +1933,49 @@ body {
     opacity: 0.6;
 }
 
-.footer__sign {
-    width: 286px;
-}
 
-.footer__sign p {
-    width: 280px;
+.footer__sign-text {
     font-size: 10px;
     font-weight: 400;
     line-height: 150%;
 }
 
-.footer__sign H2 {
+.footer__sign-title {
     margin-bottom: 24px;
 }
 
-.footer__field {
-    position: relative;
-    width: 286px;
-    height: 36px;
+.footer__sign-input {
+    background: #ffffff1f;
+    border: 1px solid #ffffff33;
     border-radius: 4px;
-    padding: 9px 12px;
-    border: 1px solid rgba(255, 255, 255, 0.20);
-    background: rgba(255, 255, 255, 0.12);
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 150%;
     margin-bottom: 12px;
+    display: flex;
 }
 
-.footer__sign-field {
+.footer__field {
+    padding: 9px 0px 9px 12px;
+    font-size: 12px;
+    line-height: 150%;
+    color: #fff;
+    width: 100%;
     position: relative;
+    background-color: transparent;
+}
+
+
+.footer__field-btn {
+    background: transparent;
+    padding: 10px 12px;
+ 
+  
 }
 
 .footer__field-btn::before {
     content: "";
+    display: block;
     background: url("../images/icons/arrow-right-mini.svg") 0 0 /100% no-repeat;
-    position: absolute;
-    top: 9px;
-    right: 12px;
     width: 16px;
     height: 16px;
-    cursor: pointer;
     transition: all .3s;
 }
 
@@ -2315,7 +2321,7 @@ body {
         flex-basis: 100%;
         max-width: none;
     }
-    
+
 
     .footer__sign-items H2 {
         margin-bottom: 10px;
