--- a/css/style.css
+++ b/css/style.css
@@ -2129,6 +2129,7 @@ body {
         align-items: center;
         justify-content: center;
         transition: all .3s;
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 
     }
 
